--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <li><div class="cydia"><a href="cydia://url/https://cydia.saurik.com/api/share#?source=***"><button class="cydiabtn">CYDIA</button></a></div></li>
 
-<li><div class="sileo"> <a href="sileo://source/yasseranzi.github.io"><button class="sileobtn">SILEO</button> </a></div></li>
+<li><div class="sileo"> <a href="sileo://source/https://yasseranzi.github.io/yaseer"><button class="sileobtn">SILEO</button> </a></div></li>
 
-<li><div class="zebra"><a href="zbra://sources/add/yasseranzi.github.io/"><button class="zebrabtn">ZEBRA</button> </a></div></li>
+<li><div class="zebra"><a href="zbra://sources/add/https://yasseranzi.github.io/yaseer"><button class="zebrabtn">ZEBRA</button> </a></div></li>
 
 </ul></div>
 </body>
